<resources>
    <string name="app_name">calculator</string>
    <string name="string_0">0</string>
    <string name="clear">AC</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="string_1">1</string>
    <string name="string_2">2</string>
    <string name="string_3">3</string>
    <string name="string_4">4</string>
    <string name="string_5">5</string>
    <string name="string_6">6</string>
    <string name="string_7">7</string>
    <string name="string_8">8</string>
    <string name="string_9">9</string>
    <string name="string_00">00</string>

</resources>