<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#282828"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:textAlignment="textEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultTv"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:layout_marginVertical="160dp"
        android:layout_marginEnd="6dp"
        android:textSize="50sp"
        android:fontFamily="@font/montserrat_regular" />

     <GridLayout
         android:layout_marginTop="-135dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="10dp"
         android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
         android:layout_below="@id/resultTv"
         android:columnCount="4"
         android:rowCount="5">

         <TextView
             android:onClick="clearoperation"
             android:id="@+id/clear"
             android:gravity="center"
             android:layout_height="0dp"
             android:layout_width="0dp"
             android:textColor="#FF0328"
             android:text="@string/clear"
             android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_columnSpan="1"
             />

         <TextView
             android:onClick="arithmeticoperation"
             android:gravity="center"
             android:id="@+id/divide"
             android:textColor="@color/white"
             android:layout_height="0dp"
             android:layout_width="0dp"
             android:text="@string/divide"
             android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             />

         <TextView
             android:onClick="arithmeticoperation"
             android:gravity="center"
             android:id="@+id/plus"
             android:layout_height="0dp"
             android:layout_width="0dp"
             android:textColor="@color/white"
             android:text="@string/plus"
             android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             />
         <TextView
             android:onClick="backspaceoperation"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:id="@+id/backnumber"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="⌫"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="30sp"
             />



         <TextView
             android:onClick="numberoperation"
             android:gravity="center"
             android:id="@+id/seven"
             android:layout_height="0dp"
             android:textColor="@color/white"
             android:layout_width="0dp"
             android:text="@string/string_7"
             android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             />

         <TextView
             android:onClick="numberoperation"
             android:gravity="center"
             android:id="@+id/eight"
             android:layout_height="0dp"
             android:layout_width="0dp"
             android:textColor="@color/white"
             android:text="@string/string_8"
             android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             />

         <TextView
             android:onClick="numberoperation"
             android:gravity="center"
             android:id="@+id/nine"
             android:layout_height="0dp"
             android:textColor="@color/white"
             android:layout_width="0dp"
             android:text="@string/string_9"
             android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             />

         <TextView
             android:onClick="arithmeticoperation"
             android:gravity="center"
             android:id="@+id/multiply"
             android:layout_height="0dp"
             android:textColor="@color/white"
             android:layout_width="0dp"
             android:text="@string/multiply"
             android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             />

         <TextView
             android:onClick="numberoperation"
             android:gravity="center"
             android:id="@+id/four"
             android:layout_height="0dp"
             android:layout_width="0dp"
             android:text="@string/string_4"
             android:textSize="30sp"
             android:textColor="@color/white"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             />

         <TextView
             android:onClick="numberoperation"
             android:gravity="center"
             android:id="@+id/five"
             android:layout_height="0dp"
             android:layout_width="0dp"
             android:textColor="@color/white"
             android:text="@string/string_5"
             android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             />

         <TextView
             android:onClick="numberoperation"
             android:gravity="center"
             android:id="@+id/six"
             android:textColor="@color/white"
             android:layout_height="0dp"
             android:layout_width="0dp"
             android:text="@string/string_6"
             android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             />

         <TextView
             android:onClick="arithmeticoperation"
             android:gravity="center"
             android:id="@+id/minus"
             android:layout_height="0dp"
             android:layout_width="0dp"
             android:textColor="@color/white"
             android:text="@string/minus"
             android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             />
         <TextView
             android:onClick="numberoperation"
             android:gravity="center"
             android:id="@+id/one"
             android:layout_height="0dp"
             android:layout_width="0dp"
             android:textColor="@color/white"
             android:text="@string/string_1"
             android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             />

         <TextView
             android:onClick="numberoperation"
             android:gravity="center"
             android:id="@+id/two"
             android:layout_height="0dp"
             android:textColor="@color/white"
             android:layout_width="0dp"
             android:text="@string/string_2"
             android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             />
         <TextView
             android:onClick="numberoperation"
             android:gravity="center"
             android:id="@+id/three"
             android:layout_height="0dp"
             android:textColor="@color/white"
             android:layout_width="0dp"
             android:text="@string/string_3"
             android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             />
         <com.google.android.material.button.MaterialButton
             android:id="@+id/equal"
             android:onClick="equalsoperation"
             android:backgroundTint="#FF0328"
             android:layout_height="0dp"
             android:layout_width="0dp"
             android:textColor="@color/white"
             android:text="@string/equal"
             android:textSize="30sp"
             android:layout_rowWeight="2"
             android:layout_rowSpan="2"
             android:layout_columnWeight="1"
             />
         <TextView
             android:onClick="numberoperation"
             android:gravity="center"
             android:id="@+id/zero"
             android:layout_height="0dp"
             android:layout_width="0dp"
             android:textColor="@color/white"
             android:text="@string/string_0"
             android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             />
         <TextView
             android:onClick="numberoperation"
             android:gravity="center"
             android:id="@+id/doublezero"
             android:layout_height="0dp"
             android:layout_width="0dp"
             android:textColor="@color/white"
             android:text="@string/string_00"
             android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             />
         <TextView
             android:onClick="numberoperation"
             android:gravity="center"
             android:id="@+id/dot"
             android:layout_height="0dp"
             android:textColor="@color/white"
             android:layout_width="0dp"
             android:text="@string/dot"
             android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             />

     </GridLayout>




</RelativeLayout>